--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- application styles -->
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="pwa.webmanifest" />
     
     <!-- application scripts -->
     <script src="app.js" defer></script>
