--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     
     <!-- application scripts -->
     <script src="app.js" defer></script>
+    <script>
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("./service-worker.js");
+        }
+    </script>
 
 </head>
 
